--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:alpine
 COPY index.html /usr/share/nginx/html/index.html
+COPY lib /usr/share/nginx/html/lib
 EXPOSE 80
 CMD ["nginx","-g","daemon off;"]
