--- a/orbitdb-peer/package.json
+++ b/orbitdb-peer/package.json
@@ -18,6 +18,7 @@
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
     "@orbitdb/core": "^3.0.2",
     "@libp2p/websockets": "^9.1.5",
+    "@libp2p/pnet": "^2.0.42",
     "blockstore-level": "^2.0.3",
     "helia": "^5.4.2"
   }
