--- a/orbitdb-webapp/package.json
+++ b/orbitdb-webapp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
     "@libp2p/websockets": "^9.1.5",
+    "@libp2p/pnet": "^2.0.42",
     "@orbitdb/core": "^3.0.2",
     "helia": "^5.4.2"
   },
