--- a/orbitdb-peer/package.json
+++ b/orbitdb-peer/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
-    "@orbitdb/core": "^3.0.2",
-    "@libp2p/websockets": "^9.1.5",
+    "@libp2p/peer-id-factory": "^4.2.4",
     "@libp2p/pnet": "^2.0.42",
+    "@libp2p/websockets": "^9.1.5",
+    "@orbitdb/core": "^3.0.2",
     "blockstore-level": "^2.0.3",
     "helia": "^5.4.2"
   }
